--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+public/hot
+public/storage
+storage/*.key
+.idea
+.vagrant
+Homestead.json
+Homestead.yaml
+npm-debug.log
+.env
+
 vendor/
 node_modules/
 
@@ -10,6 +20,3 @@ bootstrap/cache/
 .env.*.php
 .env.php
 .env
-
-# Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
-.rocketeer/
